Fix text align

--- a/src/styles/pages/Skills.module.css
+++ b/src/styles/pages/Skills.module.css
@@ -75,6 +75,12 @@
     transition: 0.2s ease-in-out;
 }
 
+@media screen and (max-width: 1200px) {
+    .Title {
+        text-align: center;
+    }
+}
+
 @media screen and (max-width: 600px) {
     .Skill {
         flex: 1 0 50%;
